# SimpleRAG

./: .env  Dockerfile  Readme.md  app.py  pyproject.toml
docs/: Mahdi.txt  pg1513.txt
